Fix alignment of titles and timestamp placeholders

--- a/esp/public/media/default_styles/scheduling_checks.css
+++ b/esp/public/media/default_styles/scheduling_checks.css
@@ -14,11 +14,13 @@ th { cursor: pointer; }
 }
 
 .scheduling-check.no-items {
-    background-color: rgba(3, 121, 0, 0.23);
+    background-color: rgb(197 224 196);
 }
 
 .scheduling-check-title {
-     width: 100%;
+     width: 320px;
+	 margin-left: 0px;
+	 margin-right: auto;
      text-align: center;
 }
 
@@ -38,10 +40,6 @@ th { cursor: pointer; }
      float: right;
 }
 
-.placeholder {
-     text-align: center;
-}
-
 .rowGreyed {
 color: lightgray;
 }
@@ -58,30 +56,24 @@ color: lightgray;
   margin: 10px;
   font-style: italic;
 }
-.load_ready{
-    background-color: rgba(3, 121, 0, 0.23);
+
+.placeholder {
+    text-align: center;
     border-radius: 3px;
-	width: 200px;
-	text-align: center;
-	margin-left: 120px;
+	width: 240px;
+	margin-left: 40px;
 	margin-right: auto;
+}
+
+.load_ready{
+    background-color: rgb(197 224 196);
 }
 
 .load_yellow{
     background-color: yellow;
-    border-radius: 3px;
-	width: 200px;
-	text-align: center;
-	margin-left: 140px;
-	margin-right: auto;
 }
 .load_fail{
     background-color: red;
-    border-radius: 3px;
-	width: 200px;
-	text-align: center;
-	margin-left: 140px;
-	margin-right: auto;
 }
 .move_left{
     margin-left: 10px;
@@ -108,7 +100,7 @@ thead {
     color: #fff;
 }
 table {
-    width: 100%
+    width: 100%;
     border-spacing: 1;
     border-collapse: collapse;
     background: white;
